welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:7: error: value unary_-_= is not a member of Int
			-I=1
                        ^